--- a/source/_posts/第一篇博客.md
+++ b/source/_posts/第一篇博客.md
@@ -11,6 +11,8 @@ comments:
 
 ## 芝士我的第一篇博客
 
+<!--more-->
+
 呃呃终于把博客做出来了……
 
 以前就一直想弄，但是太懒力，一个带学生怎么这么懒（恼）
@@ -25,16 +27,16 @@ comments:
         | -------------\
         ||              \
 /------------------\
-⏐                  ⏐
-⏐                  ⏐
-⏐                  ⏐
-⏐      失忆喷雾     ⏐
-⏐                  ⏐       这是什么？喷一下
-⏐                  ⏐
-⏐                  ⏐
-⏐                  ⏐
-⏐                  ⏐
-⏐                  ⏐
+|                  |
+|                  |
+|                  |
+|      失忆喷雾     |
+|                  |       这是什么？喷一下
+|                  |
+|                  |
+|                  |
+|                  |
+|                  |
 \------------------/
 ```
 
@@ -42,6 +44,6 @@ comments:
 
 总之平时有时间就整个活，水一篇罢
 
-下一步可能是买个超炫酷的域名，然后把 disqus 换掉
+下一步可能是买个超~~炫酷的域名，然后把 disqus 换掉
 
 （我太菜力，配 hexo 配了整整两天）
