--- a/source/_posts/记录🐑的感受.md
+++ b/source/_posts/记录🐑的感受.md
@@ -13,12 +13,14 @@ tags:
 <!--more-->
 
 事情还要追溯到几天前我去考科四，当时考场让把口罩脱了，感觉就是那个时候中招的。
+
 12.28:
 上午一起床就感觉鼻腔后部肿的厉害，有很多鼻涕出不来，但以为是传统着凉。
 中午鼻腔变干了，还是肿。
 晚饭的时候感觉有点烧。
 晚上大的要来了，去听歌，越听越烧，只能躺在床上裹被子听，当时就开始想是不是阳了。
 实在忍不住了，找我妈要了一些退烧药和抗原。测抗原，刚开始一条杠，正窃喜，过几十秒，第二条杠越来越深，寄！
+
 12.29:
 凌晨还是烧，恰了退烧药还不见好，非常稳定地在 39 度以上。头疼，腰椎更是血妈疼，坐着疼，躺着也疼。当时感觉将昏不昏，要似力。烧到 4 点多，去厕所吐了一吐，温度终于降了点，才睡下去。
 醒来已是 7 点多，测体温，我测！39 度！
@@ -26,3 +28,70 @@ tags:
 10 点，我妈拿了一些中成药。又开始烧起来力，这次是烧到了 15 点，一直 39 度以上，但是感觉比凌晨精神太多。这是怎么会事呢？
 实在绷不住，吃了午饭和退烧药。这次退烧药终于有作用了，体温少有地降到了 37 度。遂吃晚饭。
 23 点，体温回到了 36 度。是不是好了呢，思考。
+
+12.30:
+睡了一觉，起来发现 37.5 度，难绷。
+鼻腔又肿了，整个身体感觉黏糊糊的，简直是超大杯着凉。
+开始咳嗽，有痰。希望过两天能彻底好。
+我去，我弟开始打喷嚏了，又打喷嚏又咳嗽的，哈人。
+
+捏吗，到了中午了，体温一直是 37.7，带都不带变的。
+
+午觉鼻子塞，一躺下就塞。睡着睡着，感觉一股热气升上来，应该是睡不了了。测了一遍，捏吗，38 度。
+
+捏吗，我妈发烧了。
+现在还是 38 度。时不时地心慌，是不是要似了。
+
+现在是晚上 22:26，38.5，好似。
+实在受不了，恰了一片退烧药，半小时后狠狠流汗，好耶。睡觉！
+
+12.31:
+2022 最后一天捏。一起床就头痛，鼻窦炎不会复发了吧。要不是昨晚被子盖得多，说不定就白肺了捏。
+谢谢你，对乙酰氨基酚。
+
+测了一下，37.5。我妈说昨天心脏痛，哈人。我爸和我弟都润了。
+
+晚上测了一下，非常稳定的 37 度。洗了一下腿子，希望别感冒。密麻麻的，三天没洗头，头上油乎乎，起了几个包，什么时候能洗头。
+
+23:52，降到 36 度力！
+睡觉的时候突然感觉心脏痛……还好没似。
+
+1.1:
+好耶，36 度，但是喉咙痛，鼻子塞
+
+晚上：好像又变成 37 度了。
+发现吃饭的时候会出很多汗，吃一口就出一次，所以大家阳了以后要好好吃饭捏。
+希望今晚不高烧，这样明天就能洗澡力，但是今晚海口天气变凉，似乎要寄了（
+
+捏吗，突然喉头发紧
+
+1.2:
+彻底不烧力！
+
+错误的，37 度
+
+一躺下就心脏剧痛，怎么会事呢
+
+拍一张抗原：
+{% img /2022/12/29/记录🐑的感受/image/抗原.jpg "抗原" "抗原.jpg" %}
+
+1.3:
+洗澡力！
+
+1.4:
+悲报：我弟也阳了。
+
+妈个比，我爹也发烧了 😡
+我什么时候能好呢
+
+1.5:
+喜报，嗓子和软腭都不痛了
+
+一个好消息和一个坏消息
+好消息：我抗原阴力
+坏消息：我爹阳力
+
+5.24:
+时隔不到半年，二阳了，但是两天速通
+
+学校的隔离点太顶，不想回去了
