--- a/source/_posts/包烟后我在干什么.md
+++ b/source/_posts/包烟后我在干什么.md
@@ -29,7 +29,7 @@ comments:
 
 理性讨论 kon 是真好看吧平泽唯是真可爱吧 mio 酱是真帅吧 htt 5 个人是真神吧我日我日我日我想娶平泽唯当老婆天天跟平泽唯在床上打滚打完滚去吃 ui 手作蛋包饭
 
-!(yui.png)[/2024/11/22/包烟后我在干什么/yui.png]
+!(yui.png)[/2024/11/22/\345\214\205\347\203\237\345\220\216\346\210\221\345\234\250\345\271\262\344\273\200\344\271\210/yui.png]
 
 最近吃药啥感觉呢，感觉非常开心而且没有发抖过，没有起床之后那种绝望想死感了，睡得也很香，不得不说换药还是非常有效果的；最近也经常跟奶龙群 u 面积， lsj 真尤物吧
 
